Content and configuration updates

--- a/doc/_config.yml
+++ b/doc/_config.yml
@@ -2,7 +2,8 @@
 # Learn more at https://jupyterbook.org/customize/config.html
 
 title: Stanford Species Occurrences
-author: Jeremy Nelson
+author: Jeremy Nelson, Nicole Coleman, Amanda Whitmire, Josh Greben
+copyright: "2021"
 logo: logo.png
 
 # Force re-execution of notebooks on each build.
