--- a/doc/_toc.yml
+++ b/doc/_toc.yml
@@ -2,12 +2,18 @@
 # Learn more at https://jupyterbook.org/customize/toc.html
 #
 - file: intro
-  sections:
-    - file: data-prep
-    - file: grobid-pdf
-- file: future
-  sections:
-    - file: abstract-generator
-- file: help
-  sections:
-    - file: markdown
+  numbered: true
+
+- part: Data and Model Prepreparation
+  chapters:
+  - file: data-prep
+  - file: grobid-pdf
+
+- part: Future
+  chapters:
+  - file: future
+  - file: abstract-generator
+
+- part: Help
+  chapters:
+  - file: markdown
