--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-streamlit
-jinja2
-black
-jupyter-book
-matplotlib
-numpy
-ghp-import
-flake8
-spacy
-uvicorn
+streamlit==0.77.0
+jinja2==2.11.3
+black==20.8b1
+jupyter-book==0.10.0
+matplotlib==3.3.4
+numpy==1.20.1
+ghp-import==1.0.1
+flake8==3.8.4
+spacy==3.0.3
+uvicorn==0.11.8
 mypy==0.812
 fastapi==0.63.0
