--- a/doc/_config.yml
+++ b/doc/_config.yml
@@ -2,7 +2,7 @@
 # Learn more at https://jupyterbook.org/customize/config.html
 
 title: Stanford Species Occurrences
-author: Jeremy Nelson, Nicole Coleman, Amanda Whitmire, Josh Greben
+author: Jeremy Nelson, Nicole Coleman, Amanda Whitmire, Josh Greben, Jessica Cebra
 copyright: "2021"
 logo: logo.png
 
