--- a/.github/workflows/build-book.yml
+++ b/.github/workflows/build-book.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Python application
+name: Build and Publish SPOC Jupyter Book
 
 on:
   push:
@@ -26,7 +26,7 @@ jobs:
     # Build the SPOC Book
     - name: Build the book
       run: |
-        jupyter-book build /doc
+        jupyter-book build ./doc
         
     # Push the book's HTML to github-pages
     - name: GitHub Pages action
