--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,4 @@ mypy==0.812
 fastapi==0.63.0
 pytest==6.2.2
 lxml==4.6.2
+-e git+https://github.com/sul-dlss-labs/spacy-lookup.git@57fdf93a01db7aaac6ec4f896f6f7aa60eedeb50#egg=spacy_lookup
