CD to AWS EC2 with github actions

--- a/DockerfileAPI
+++ b/DockerfileAPI
@@ -4,8 +4,10 @@ WORKDIR /usr/src/app
 
 COPY . .
 
+RUN apt-get update && apt-get install -y git
+
 RUN pip install --no-cache -r requirements.txt
 
 EXPOSE 8501
 
-CMD uvicorn src.api.main:app
+CMD uvicorn --host 0.0.0.0 src.api.main:app
