--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,3 +13,10 @@ services:
       dockerfile: DockerfileAPI
     ports:
       - 8000:8000
+
+  http:
+    build:
+      context: .
+      dockerfile: DockerfileNginx
+    ports:
+      - 8100:80
