--- a/DockerfileAPI
+++ b/DockerfileAPI
@@ -10,4 +10,4 @@ RUN pip install --no-cache -r requirements.txt
 
 EXPOSE 8501
 
-CMD uvicorn --host 0.0.0.0 src.api.main:app
+CMD uvicorn --host 0.0.0.0 --root-path /api src.api.main:app
