--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     client_max_body_size 4G;
-    server_name taxon.stanford.edu;
+    server_name taxa.stanford.edu;
 
     proxy_http_version 1.1;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -17,7 +17,7 @@ server {
         try_files $uri @proxy_to_app;
     }
 
-    location /api {
+    location /api/ {
         try_files $uri @proxy_to_api;
     }
 
