--- a/.github/workflows/spoc-deploy.yml
+++ b/.github/workflows/spoc-deploy.yml
@@ -3,6 +3,8 @@ name: Deploy to AWS EC2
 on:
   push:
     branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 env:
   AWS_EC2_PRIVATE_KEY: ${{secrets.AWS_EC2_PRIVATE_KEY}}
@@ -18,6 +20,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Debug runner
+        run: |
+          echo "HERE"
+          pwd
       - name: Set up private key on runner
         run: |
           mkdir -p ~/.ssh/
