--- a/.github/workflows/spoc-deploy.yml
+++ b/.github/workflows/spoc-deploy.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
           echo "HERE"
           pwd
-          mkdir -p ~/.ssh/
+          sudo mkdir -p ~/.ssh/
           ls -l ~/.ssh
       - name: Set up private key on runner
         run: |
