--- a/.github/workflows/spoc-deploy.yml
+++ b/.github/workflows/spoc-deploy.yml
@@ -20,19 +20,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Debug runner
-        run: |
-          echo "HERE"
-          pwd
-          mkdir -p .ssh/
-          ls -al
       - name: Set up private key on runner
         run: |
-          mkdir -p ~/.ssh/
-          echo "$AWS_EC2_PRIVATE_KEY" > ~/.ssh/private.key
-          chmod 400 ~/.ssh/private.key
-          ssh-keyscan -H $AWS_EC2_HOST > ~/.ssh/known_hosts
-          ls -l ~/.ssh/
+          mkdir -p .ssh/
+          echo "$AWS_EC2_PRIVATE_KEY" > .ssh/private.key
+          chmod 400 .ssh/private.key
+          ssh-keyscan -H $AWS_EC2_HOST > .ssh/known_hosts
+          ls -al
+          ls -l .ssh/
       - name: Login to EC2 server and run deploy script
         run: |
           ssh -i ~/.ssh/private.key ubuntu@"$AWS_EC2_HOST" .spoc/deploy.sh
