--- a/.github/workflows/spoc-deploy.yml
+++ b/.github/workflows/spoc-deploy.yml
@@ -25,6 +25,7 @@ jobs:
           mkdir -p .ssh/
           ls -al
           echo "$AWS_EC2_PRIVATE_KEY" > .ssh/private.key
+          chmod 400 .ssh/private.key
           ls -l .ssh/
       - name: Set up private key on runner
         run: |
