--- a/.github/workflows/spoc-deploy.yml
+++ b/.github/workflows/spoc-deploy.yml
@@ -27,4 +27,4 @@ jobs:
           ls -l ~/.ssh/
       - name: Login to EC2 server and run deploy script
         run: |
-          ssh -i ~/.ssh/private.key ubuntu@"$AWS_EC2_HOST" .spoc/deploy.sh
+          ssh -i ~/.ssh/private.key ubuntu@"$AWS_EC2_HOST" ./spoc/deploy.sh
