Entities Area component now with clicking buttons

--- a/DockerfileAPI
+++ b/DockerfileAPI
@@ -1,5 +1,5 @@
 FROM python:3.8-slim
- 
+
 WORKDIR /usr/src/app
 
 COPY . .
@@ -7,6 +7,8 @@ COPY . .
 RUN apt-get update && apt-get install -y git
 
 RUN pip install --no-cache -r requirements.txt
+
+RUN python -m spacy download en_core_web_md
 
 EXPOSE 8501
 
