--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -22,10 +22,19 @@ server {
     }
 
     location @proxy_to_app {
-      proxy_pass http://verifier:8501;
+      proxy_pass localhost:8501;
     }
 
     location @proxy_to_api {
-      proxy_pass http://api:8000;
+      proxy_pass localhost:8000;
+    }
+}
+
+server {
+    listen 443 ssl;
+    server_name taxa.stanford.edu;
+
+    location / {
+        proxy_pass http://taxa.stanford.edu;
     }
 }
