Add nginx conf created by certbot

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,5 +1,4 @@
 server {
-    listen 80;
     client_max_body_size 4G;
     server_name taxa.stanford.edu;
 
@@ -22,19 +21,30 @@ server {
     }
 
     location @proxy_to_app {
-      proxy_pass localhost:8501;
+      proxy_pass http://localhost:8501;
     }
 
     location @proxy_to_api {
-      proxy_pass localhost:8000;
+      proxy_pass http://localhost:8000;
     }
+
+    listen 443 ssl; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/taxa.stanford.edu/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/taxa.stanford.edu/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+
 }
 
 server {
-    listen 443 ssl;
-    server_name taxa.stanford.edu;
+    if ($host = taxa.stanford.edu) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
 
-    location / {
-        proxy_pass http://taxa.stanford.edu;
-    }
+
+    listen 80;
+    server_name taxa.stanford.edu;
+    return 404; # managed by Certbot
+
+
 }
