--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -3,10 +3,29 @@ server {
     client_max_body_size 4G;
     server_name taxa.stanford.edu;
 
+    location / {
+        # redirect to HTTPS
+        return 301 https://$server_name$request_uri;
+     }
+}
+
+server {
+    listen 443 ssl;
+    server_name taxa.stanford.edu;
+
+    ssl_certificate "/etc/letsencrypt/live/taxa.stanford.edu/fullchain.pem";
+    ssl_certificate_key "/etc/letsencrypt/live/taxa.stanford.edu/privkey.pem";
+
+    # Automatically route HTTP to HTTPS
+    add_header Strict-Transport-Security "max-age=31536000";
+
     proxy_http_version 1.1;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
     proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-Proto https;
+    proxy_set_header X-Forwarded-Host $host;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
     # streamlit specific:
     proxy_set_header Upgrade $http_upgrade;
@@ -28,4 +47,5 @@ server {
     location @proxy_to_api {
       proxy_pass http://api:8000;
     }
+
 }
