--- a/doc/_toc.yml
+++ b/doc/_toc.yml
@@ -7,6 +7,7 @@
 - part: Project Design
   chapters:
   - file: methods
+  - file: methods-planner-ner
 
 - part: Data and Model Prepreparation
   chapters:
